fix scrollbar color

--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -30,6 +30,9 @@ body {
 ::-webkit-scrollbar-thumb {
     background-color: $colorScrollbar;
 }
+::-webkit-scrollbar-track {
+    background-color: $colorBackgroundMain;
+}
 /* ************************* */
 
 .wrapper {
